style.css
body {
  background-color: black;
}
img {
  width: 100%;
}

#ytdiv,
#trailerdiv,
#nydiv {
  background-color: rgb(236, 236, 239);
  border-radius: 3px;
  padding-top: 10px;
  padding-bottom: 10px;
}

/* Style the buttons that are used to open and close the accordion panel */
.accordion {
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active,
.accordion:hover {
  background-color: #ccc;
}

/* Style the accordion panel. Note: hidden by default */
.panel {
  padding: 0 18px;
  background-color: white;
  display: none;
  overflow: hidden;
}

.accordion:after {
  content: "\02795"; /* Unicode character for "plus" sign (+) */
  font-size: 13px;
  color: #777;
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "\2796"; /* Unicode character for "minus" sign (-) */
}

/* Modal */

.modal-overlay {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  justify-content: center;
  height: 100%;
  width: 100%;
  background-color: black;
  z-index: 2;
}

.loading-img {
  width: 100%;
  object-fit: contain;
}

.image-container {
  background-image: url("assets/movie-screen-cropped.gif");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
  height: 200px;
}

.title-text {
  background-color: white;
  color: black;
  font-size: 3vw;
  font-weight: bold;
  margin: 0 auto;
  width: 30%;
  position: absolute;
  top: 40%;
  right: 18%;
  mix-blend-mode: screen; /* This makes the cutout text possible */
}

.grabbing-content {
  background-color: white;
  color: black;
  font-weight: bold;
  mix-blend-mode: screen;
}

#trailer,
.review {
  width: 75%;
}

